# freeton-smv

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
contracts/: IProposal.sol  ISMV.sol  Proposal.abi.json  Proposal.sol  Proposal.tvc  SMV.sol  VotingInitiator.abi.json  VotingInitiator.sol  VotingInitiator.tvc  VotingWallet.sol
scripts/: build_contracts.bash  clear.sh  giver.js
src/: contract.rs  giver.rs  main.rs  voting_initiator.rs
test/: SmvCreateProposalTest.js  SmvDeployTest.js
tests/: voting-initiator-deploy-test.rs
